@@ -104,6 +104,29 @@ var $browserRestrictFiles = array('.iso','.vdi','.vmdk','.img','.bin','.vhd','.h
  */
 var $hostMemInfoRefreshInterval = 5;
 
+/*
+ * VM Memory warnings.
+ * 
+ * If $vmMemoryStartLimitWarn is enabled, each time a VM is started through
+ * phpVirtualBox, it will check that the available host memory is greater than
+ * the base and video memory of the VM. If it is not, a confirmation dialog
+ * will be presented to confirm that you want to start the VM.
+ *
+ * If $vmMemoryOffset is set (and $vmMemoryStartLimitWarn), $vmMemoryOffset
+ * megabytes is subtracted from the available host memory before the check is
+ * performed by $vmMemoryStartLimitWarn logic. For instance it may be a good
+ * idea to always have VM memory requirements + 100MB free. 100 is the default.
+ */
+#var $vmMemoryStartLimitWarn = true;
+var $vmMemoryOffset = 100;
+
+
+/*
+ * Display a "minimal" VM list. This will shrink the size of VMs in the VM list
+ * and exclude some information so that they take up less space.
+ */
+#var $vmListMinimal = true;
+
 /* Enable Firefox's "App Tab" notification support by changing the browser's title
  * when something in phpVirtualBox's VM list changes or an alert is triggered.
  */
